Fix dark mode for menu in mobile

--- a/src/assets/scss/custom/_navbar.scss
+++ b/src/assets/scss/custom/_navbar.scss
@@ -297,7 +297,7 @@
     .navbar-collapse.show {
         padding: 1.5rem;
         border-radius: $border-radius;
-        background: #FFF;
+        background: $body-bg;
         box-shadow: 0 50px 100px rgba(50,50,93,.1),0 15px 35px rgba(50,50,93,.15),0 5px 15px rgba(0,0,0,.1);
         animation: show-navbar-collapse .2s ease forwards;
     }
